fix: word overflow & disable image effect

--- a/src/styles/components/_single-word.scss
+++ b/src/styles/components/_single-word.scss
@@ -48,6 +48,10 @@
     }
   }
 
+  * {
+    word-break: break-word;
+  }
+
   &__header {
     grid-area: header;
     display: flex;
@@ -281,6 +285,7 @@
       width: fit-content;
       box-shadow: 0 3px 3px
         color-mix(in srgb, var(--color-box-shadow, var(--orange-900)) 16%, transparent);
+      height: fit-content;
 
       @include butler-mx.dark-mode-class {
         --color-border: var(--new-blue-200);
@@ -297,40 +302,40 @@
       font-size: 0.8rem;
     }
 
-    picture > source {
-      display: none;
-    }
+    // picture > source {
+    //   display: none;
+    // }
 
     // @see example 1: https://codepen.io/highplainsdrifter/pen/DZZWRE
     // @see example 2:https://alvaromontoro.com/blog/68020/old-photo-effect-with-css
-    picture {
-      display: block;
-      position: relative;
-      filter: grayscale(1) blur(1px) contrast(1.2) sepia(1) blur(0.25px);
-      mask: radial-gradient(#000, #000a);
+    // picture {
+    //   display: block;
+    //   position: relative;
+    //   filter: grayscale(1) blur(1px) contrast(1.2) sepia(1) blur(0.25px);
+    //   mask: radial-gradient(#000, #000a);
 
-      &::before {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        mask: radial-gradient(farthest-side, #0000 30%, #000);
-        backdrop-filter: blur(5px) sepia(90%);
-      }
+    //   &::before {
+    //     content: "";
+    //     position: absolute;
+    //     width: 100%;
+    //     height: 100%;
+    //     mask: radial-gradient(farthest-side, #0000 30%, #000);
+    //     backdrop-filter: blur(5px) sepia(90%);
+    //   }
 
-      &::after {
-        content: "";
-        position: absolute;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        opacity: 0.6;
-        background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100'><filter id='noise' x='0%' y='0%' width='100%' height='100%'><feTurbulence baseFrequency='0.5' /></filter><rect x='0' y='0' width='100%' height='100%' filter='url(%23noise)' /></svg>"),
-          #f003;
-        filter: grayscale(100%) contrast(150%);
-        mix-blend-mode: darken;
-      }
-    }
+    //   &::after {
+    //     content: "";
+    //     position: absolute;
+    //     left: 0;
+    //     width: 100%;
+    //     height: 100%;
+    //     opacity: 0.6;
+    //     background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100'><filter id='noise' x='0%' y='0%' width='100%' height='100%'><feTurbulence baseFrequency='0.5' /></filter><rect x='0' y='0' width='100%' height='100%' filter='url(%23noise)' /></svg>"),
+    //       #f003;
+    //     filter: grayscale(100%) contrast(150%);
+    //     mix-blend-mode: darken;
+    //   }
+    // }
   }
 
   &__learn-more {
